syntax = "proto3";

package com.skblab.proto;

import "google/protobuf/empty.proto";
import "metrics.proto";
import "lead.proto";

option java_package = "com.skblab.protoapi";
option java_multiple_files = true;

service MetricService {
    rpc send(MetricEvent) returns (google.protobuf.Empty) {}
}

service LeadRegistrationService {
    rpc send(LeadHandleRequest) returns (LeadHandleResponse) {}
}